Fixed some grammer issues and the mobile spacing of the instructions on the skills page.

--- a/code/css/skills.css
+++ b/code/css/skills.css
@@ -161,6 +161,10 @@ main {
 /* || MOBILE SETTINGS || */
 @media screen and (max-width: 768px) {
 
+    #instructions {
+        padding: 0 3rem;
+    }
+
     /* Buttons and blurbs format fully to columns */
     #selectors {
         flex-direction: column;
